Update greeting for Bhai Dooj

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <canvas id="confetti"></canvas>
 
     <div class="container">
-      <h1>Happy Bhai Dooj, Amrita ❤️</h1>
+      <h1>Happy Bhai Dooj, Chiku ❤️</h1>
       <h2>From Aryan 💫</h2>
       <p>You're the best sister anyone could ask for!<br />Wishing you endless happiness and love 💖</p>
       <div class="heart">💝</div>
